2015-08-25  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/memset.S: Replace %xmm8 with %xmm0.

2015-08-25  Ondřej Bílka  <neleai@seznam.cz>

	* debug/strcpy_chk.c: Improve performance.
	* debug/stpcpy_chk.c: Likewise.
	* sysdeps/x86_64/strcpy_chk.S: Remove.
	* sysdeps/x86_64/stpcpy_chk.S: Remove.

	[BZ #18240]
	* misc/hsearch_r.c (__hcreate_r): Handle overflow.

2015-08-25  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #15128]
	* sysdeps/x86_64/Makefile [$(subdir) == elf] (tests): Add
	ifuncmain8.
	(modules-names): Add ifuncmod8.
	($(objpfx)ifuncmain8): New rule.
	* sysdeps/x86_64/dl-machine.h: Include <dl-procinfo.h> and
	<cpuid.h>.
	(elf_machine_runtime_setup): Use _dl_runtime_resolve_sse,
	_dl_runtime_resolve_avx, or _dl_runtime_resolve_avx512,
	_dl_runtime_profile_sse, _dl_runtime_profile_avx, or
	_dl_runtime_profile_avx512, based on HAS_ARCH_FEATURE.
	* sysdeps/x86_64/dl-trampoline.S: Rewrite.
	* sysdeps/x86_64/dl-trampoline.h: Likewise.
	* sysdeps/x86_64/ifuncmain8.c: New file.
	* sysdeps/x86_64/ifuncmod8.c: Likewise.
	* sysdeps/x86_64/nptl/tcb-offsets.sym (RTLD_SAVESPACE_SSE):
	Removed.
	* sysdeps/x86_64/nptl/tls.h (__128bits): Removed.
	(tcbhead_t): Change rtld_must_xmm_save to __glibc_unused1.
	Change rtld_savespace_sse to __glibc_unused2.
	(RTLD_CHECK_FOREIGN_CALL): Removed.
	(RTLD_ENABLE_FOREIGN_CALL): Likewise.
	(RTLD_PREPARE_FOREIGN_CALL): Likewise.
	(RTLD_FINALIZE_FOREIGN_CALL): Likewise.

2015-08-24  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/aarch64/bzero.S (__bzero): Remove.

2015-08-24  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/aarch64/fpu/math_private.h (libc_feholdsetround_aarch64_ctx):
	Unconditionally set __fpcr to avoid uninialized warning.
	(libc_feholdsetround_noex_aarch64_ctx): Likewise.

2015-08-24  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* malloc/arena.c (arena_get_retry): Don't use main_arena if it
	is corrupt.

	* malloc/arena.c (arena_get2): Drop unused argument.
	(arena_lock): Adjust.
	(arena_get_retry): Likewise.
