@@ -1,1 +1,0 @@
-#include <string/memcmp.c>
